public/src/scss/components/home/integrations.scss
.home.integrations {
	padding: 30px 30px 60px 30px;
	transition: padding 0.3s;
	
	@media (min-width: 800px) {
		padding-left: 135px;
		padding-right: 135px;
	}
	
	@media (min-width: 990px) {
		flex-direction: row;
	}
	
	@media (min-width: 1370px) {
		padding-left: 320px;
		padding-right: 320px;
	}
	
	> .left {
		> a > .logo {
			max-height: 60px;
		}
		
		> h1 {
			margin: 20px 0;
			font-size: 28px;
			font-weight: 800;
			line-height: 38px;
			color: #582efe;
			transition: font-size 0.3s, line-height 0.3s;
			
			@media (min-width: 590px) {
				font-size: 38px;
				line-height: 48px;
			}
		}
		
		> .items > div {
			> img {
				height: 16px;
				margin-top: 3px;
				transition: margin 0.3s;
				
				@media (min-width: 590px) {
					margin-top: 6px;
				}
			}
			
			> p {
				margin-left: 20px;
				font-size: 16px;
				font-weight: 600;
				line-height: 20px;
				opacity: 0.8;
				transition: font-size 0.3s, line-height 0.3s;
				
				@media (min-width: 590px) {
					font-size: 22px;
					line-height: 28px;
				}
			}
			
			&:not(:last-child) {
				margin-bottom: 16px;
			}
		}
	}
	
	> .right {
		grid-template-columns: repeat(2, 100px);
		margin-top: 30px;
		
		@media (min-width: 320px) {
			grid-template-columns: repeat(2, 120px);
		}
		
		@media (min-width: 370px) {
			grid-template-columns: repeat(2, 140px);
		}
		
		@media (min-width: 530px) {
			grid-template-columns: repeat(3, 140px);
		}
		
		@media (min-width: 590px) {
			grid-template-columns: repeat(3, 160px);
		}
		
		@media (min-width: 990px) {
			grid-template-columns: repeat(2, 140px);
			margin-top: 0;
			margin-left: 40px;
		}
		
		@media (min-width: 1150px) {
			grid-template-columns: repeat(3, 140px);
		}
		
		@media (min-width: 1370px) {
			grid-template-columns: repeat(2, 160px);
		}
		
		@media (min-width: 1570px) {
			grid-template-columns: repeat(3, 160px);
		}
		
		> img {
			padding: 10px;
			border-radius: 8px;
		}
	}
}

